feat(apps/api): add collateral.change and debt.change (#184)
* feat(apps/api): add collateral.change and debt.change

* chore(apps/api): temporary fix
